# esp32_playground

./: README.md
arduino/esp32_adafruit_lsm6ds33_int/: esp32_adafruit_lsm6ds33_int.ino
arduino/esp32_adafruit_lsm6dsm_int/: esp32_adafruit_lsm6dsm_int.ino
arduino/esp32imu/: CMakeLists.txt
arduino/esp32imu/bindings/python/: CMakeLists.txt  py_esp32imu.cpp  setup.py.in
arduino/esp32imu/examples/: main.py
arduino/esp32imu/firmware/: esp32imu_serial.h  firmware.bak  firmware.ino  firmware_swapbuf.bak
arduino/esp32imu/include/esp32imu/: serial_driver.h
arduino/esp32imu/include/protocol/: esp32imu_serial.h
arduino/esp32imu/src/: screenprint.cpp  serial_driver.cpp
arduino/esp32logger/: README.md  esp32logger.ino
arduino/esp32logger_icm42688/: esp32logger_icm42688.ino
arduino/esp32logger_lsm/: bin_to_csv.py  esp32logger_lsm.ino  plot_data.m  plot_hists.py
arduino/icm42688p/: ICM_42688p.h  icm42688p.ino  myICM42688.cpp  myICM42688.h
arduino/icm42688p-whoami/: icm42688p.ino
platformio/hello_world/src/: main.cpp
platformio/siggen/: CMakeLists.txt  sdkconfig.esp32dev  sdkconfig.esp32dev.old
platformio/siggen/src/: Kconfig.projbuild  main.c  main.cold2
